--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<p>My Recent Work Experience, Project works & Research Publications</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/Internship.jpg" alt="" /></a>
+											<a href="https://www.hdfcfund.com/" class="image"><img src="images/internship.png" alt="" /></a>
 											<div class="inner">
 												<h4>Project Trainee at HDFC Asset Management Company LTD.</h4>
 												<p>Domain: Digital Marketing & Automation (Digitization Dept.)
@@ -84,7 +84,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://www.hdfcfund.com/" class="image"><img src="images/bot.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/bot.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Chatbot for Healthcare Purposes Using Deep Learning</h4>
 												<p>Paper Presented at IEEE-WS4 London 2020 Conference <a href="https://ieeexplore.ieee.org/document/9210351">here is the link</a>and if you are looking for repo then you can find it <a href="https://github.com/prathamesh-kandpal/HealthcareBOT">here</a></p>
