--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<p>My Recent Work Experience, Project works & Research Publications</p>
 									<div class="features">
 										<article>
-											<a href="https://www.hdfcfund.com/" class="image"><img src="images/internship.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/work.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Project Trainee at HDFC Asset Management Company LTD.</h4>
 												<p>Domain: Digital Marketing & Automation (Digitization Dept.)
