--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
+									<a href="https://drive.google.com/file/d/1SpCyRl9avsK096B-4cSEJLwf6F6ipqZt/view?usp=sharing">View My Resume</a><br/>
 									<p>Any queries? <br /> Just write to me on any of my social media handles or send me a mail, I will get back to you. <br />DANKE SCHOEN!</p>
 									<ul class="icons">
 						            <li><a href="https://twitter.com/pratham_kandpal" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -129,6 +130,7 @@
                                     <li><a href="https://linkedin.com/in/prathamesh-kandpal-487425104/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					                </ul>
 					                <a href="mailto:prathamesh.kandpal@gmail.com">Send an email here</a>
+							
                                     
 									<!-- <form method="post" action="form_handler.php">
 										<div class="row gtr-uniform">
