--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Software Developer</h2>
-										<p>Web Development, Android App Development, Artifical Intelligence, Machine Learning & Natural Language Processing.
+										<h2>Associate Engineer @ Eaton</h2>
+										<p>Web Development, Android App Development, Artifical Intelligence, Machine Learning & Natural Language Processing, and Robotics
 										</p>
 									</header>
-									<p>Welcome to my Portfolio, Scroll Down to see my skills, co-curricular activites, academic projects & work experience.</p>
+									<p>I am working in the eMobility division at Eaton. My task is to verify & validate application software components of electric inverters</p>
 								</div>
 							</section>
 
@@ -57,6 +57,7 @@
 									
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Programming Languages : C, C++, HTML5, Python, R Studios</li>
+										<li class="icon solid fa-code">Things I use at work : MATLAB, VectorCAST, IBM Jazz, IBM RTC, PyCharm</li>
 										<li class="icon solid fa-code">Frameworks : Google Analytics, CMS Drupal, Sublime Text, Visual Studios, Google Collab, Anaconda</li>
 										<li class="icon solid fa-book">IT Concepts : Data Structures & Algorithms, Object Oriented Programming, Web Development, Machine Learning, Natural Language Processing, Networking, DBMS basics.</li>
 										<li class="icon solid fa-laptop">MacOS, Windows, Ubunto, MS Office</li>
@@ -70,6 +71,14 @@
 									<h3>A Few Accomplishments</h3>
 									<p>My Recent Work Experience, Project works & Research Publications</p>
 									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/Eaton.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Associate Engineer at Eaton India Innovation Center, Pune</h4>
+												<p>Domain: Verification & Validation - eMobility
+                                                <br />Processor in Loop(PiL) testing for application software components using MATLAB Simulink Models</p>
+											</div>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/work.jpg" alt="" /></a>
 											<div class="inner">
