--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Associate Engineer @ Eaton</h2>
-										<p>Skills & Specialities: Web Development, Android App Development, Artifical Intelligence, Machine Learning & Natural Language Processing, and Robotics
+										<p>Skills & Specialities - Web Development, Android App Development, Artifical Intelligence, Machine Learning & Natural Language Processing, and Robotics
 										</p>
 									</header>
 									<p>I am working in the eMobility division at Eaton. My task is to verify & validate application software components of electric inverters</p>
