--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/back2.jpg" alt="" />
+									<img src="images/luke-chesser-tgrBcf7S_dY-unsplash.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
