--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/nicola-ricca-oSM6a3kSSeA-unsplash.jpg" alt="" />
+									<img src="images/nicola-ricca-oSM6a3kSSeA-unsplash.jpg" title="&#x1F4F7;: Nicola Ricca"alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
